<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context="com.denniskim.kisang.sketch.MainActivity"
    android:weightSum="0">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">
<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/grey"
    android:background="@drawable/grey_border_bottom"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/grey"
        >

        <ImageButton
            android:background="@color/grey"
            android:id="@+id/new_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/start_new"
            android:src="@drawable/ic_new_sketch" />

        <ImageButton
            android:background="@color/grey"
            android:id="@+id/draw_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/brush"
            android:src="@drawable/ic_pen_size" />

        <ImageButton
            android:background="@color/grey"
            android:id="@+id/erase_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/erase"
            android:src="@drawable/ic_erasor_width" />

        <ImageButton
            android:background="@color/grey"
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_download" />

        <ImageButton
            android:background="@color/grey"
            android:id="@+id/colorPallete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/Pallete"
            android:src="@drawable/ic_paintpalette" />
    </LinearLayout>
</android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        >
        <com.denniskim.kisang.sketch.DrawingView
            android:id="@+id/drawing"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:background="#FFFFFFFF"
            />
    </android.support.v7.widget.CardView>
</RelativeLayout>